# cpp_examples

./: .gitignore
asio/: .clang-format  CMakeLists.txt  client.cpp  server.cpp  server.h  session.h
asio/asio_mutex/: server.cpp  server.h  session.h
asio/asio_strand/: CMakeLists.txt  client.cpp  server.cpp  server.h  session.h  state_client.cpp
asio/tcpClient/: CMakeLists.txt  client.cpp  tcpServer.py  timer.cpp
crc/: crc16arc.cpp  crc16arc.sh
unit/: angle.hpp  rad_deg.cpp
variant/: variant_visit.cpp  variant_visit.sh  visitor_multi_param1.cpp  visitor_multi_param2.cpp  visitor_operator.cpp
